# culebra

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.cfg
.github/workflows/: test.yaml
culebra/: __main__.py  ast.py  error_reporter.py  lexer.py  parser.py  repl.py  setup.py  token.py
culebra/interpreter/: __main__.py  environment.py  evaluation_tree.py  interpreter.py
examples/: ackerman.culebra  brainfuck.culebra  conditionals.culebra  error_reporting.culebra  fibunacci.culebra  loops.culebra
extensions/culebra-intellij/: build.gradle.kts  settings.gradle.kts
extensions/culebra-intellij/src/main/kotlin/com/culebra/: CulebraFileType.kt  CulebraLanguage.kt  CulebraSyntaxHighlighter.kt  CulebraSyntaxHighlighterFactory.kt
extensions/culebra-vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
extensions/culebra-vscode/syntaxes/: culebra.tmLanguage.json
src/: ast.py  compiler.py  lexer.py  lexer_repl.py  parser.py  repl.py  token.py
test/: __init__.py  compiler_test.py  lexer_test.py  parser_test.py
test/interpreter/: interpreter_test.py  turing_complete_test.py
