[project]
name = "culebra"
version = "0.0.1"
description = "Lenguaje de programación experimental"
authors = [{ name = "Carlos Nexans" }]
dependencies = []

[project.scripts]
culebra-repl = "culebra.repl:main"
culebra = "culebra.interpreter:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
